MobileHeader: fixed layout bugs with scrolling

--- a/src/components/Header/MobileHeader/MobileHeader.module.css
+++ b/src/components/Header/MobileHeader/MobileHeader.module.css
@@ -8,9 +8,10 @@
     background-color: var(--cardbg);
 }
 .header__wrapper{
-    max-width: 330px;
+    margin: 0px 12px;
+    max-width: 370px;
     max-height: 60px;
-    flex-basis: 330px;
+    flex-basis: 370px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,7 +31,7 @@
 }
 
 .menuBurger {
-    width: 100%;
+    width: 250px;
     height: 100%;
     position: absolute;
     overflow: scroll;
@@ -39,18 +40,26 @@
     opacity: 0;
     left: -100%;
     transition: all 0.3s ease-in-out;
-    background-color: rgba(102, 102, 102, 0.07);
-    backdrop-filter: blur(0.05rem);
+}
+.menuBurger::-webkit-scrollbar{
+    display: none;
 }
 .menuBurgerTransition{
     left: 0;
     opacity: 1;
 }
-.backdrop{
+.bgDrop {
     position: absolute;
     z-index: 990;
     width: 100%;
     height: 1040px;
     left: 0;
     top: 0;
+    background-color: rgba(102, 102, 102, 0.07);
+    backdrop-filter: blur(0.05rem);
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
 }
+.bgDropTransition{
+    opacity: 1;
+}  
